[tool.poetry]
name = "reimagined-broccoli"
version = "0.1.0"
description = ""
authors = ["Danil Melkozerov <danmelk.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "reimagined-packages"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
revchatgpt = "^6.6.0"
python-dotenv = "^1.0.0"
flask = "^2.3.2"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
